Add FluxorEditingDemo to compare with Stateless pattern
- Fluxor (Redux pattern) for state management
- State, Actions, Reducers in Store/EmployeeEdit/
- Same editing constraints as StateMachineEditingDemo
- Shows pattern comparison in UI

--- a/src/BlazorKoans.App/Components/Pages/Exercises.razor
+++ b/src/BlazorKoans.App/Components/Pages/Exercises.razor
@@ -88,6 +88,7 @@
                         <li><a href="exercises/radzenkoans/SelectionDemo">SelectionDemo</a></li>
                         <li><a href="exercises/radzenkoans/InlineEditingDemo">InlineEditingDemo</a></li>
                         <li><a href="exercises/radzenkoans/StateMachineEditingDemo">StateMachineEditingDemo</a></li>
+                        <li><a href="exercises/radzenkoans/FluxorEditingDemo">FluxorEditingDemo</a></li>
                         <li><a href="exercises/radzenkoans/LoadDataDemo">LoadDataDemo</a></li>
                     </ul>
                 </div>
