--- a/src/BlazorKoans.App/Components/App.razor
+++ b/src/BlazorKoans.App/Components/App.razor
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <Fluxor.Blazor.Web.StoreInitializer />
     <Routes />
     <ReconnectModal />
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
